# Kale

./: .gitignore  AUTO_DEV_GUIDE.md  CMakeLists.txt  LICENSE  README.md  claude-progress.txt  feature_list.json  init.sh  kale_auto_dev.sh
apps/: CMakeLists.txt
apps/gamepad_monitor/: CMakeLists.txt  main.cpp
apps/hello_kale/: CMakeLists.txt  main.cpp
apps/hello_kale/shaders/: triangle.vert  triangle_mesh.vert
apps/render_demo/: CMakeLists.txt  main.cpp
apps/render_demo/shaders/: cube.frag  cube.vert
docs/design/: device_abstraction_layer_design.md  executor_layer_design.md  rendering_engine_code_examples.md  rendering_engine_design.md  rendering_pipeline_layer_design.md  resource_management_layer_design.md  scene_management_layer_design.md
docs/executor/: README.md
docs/todolists/: device_abstraction_layer_todolist.md  executor_layer_todolist.md  project_development_flow.md  rendering_pipeline_layer_todolist.md  resource_management_layer_todolist.md  scene_management_layer_todolist.md
scripts/: setup_dependencies.ps1  setup_dependencies.sh
src/kale_device/: CMakeLists.txt  input_manager.cpp  opengl_render_device.cpp  placeholder.cpp  render_device.cpp  vulkan_context.cpp  vulkan_rdi_utils.cpp  vulkan_render_device.cpp  window_system.cpp
src/kale_device/include/kale_device/: command_list.hpp  input_manager.hpp  opengl_render_device.hpp  rdi_types.hpp  render_device.hpp  vulkan_context.hpp  vulkan_rdi_utils.hpp  vulkan_render_device.hpp  window_system.hpp
src/kale_engine/: CMakeLists.txt  placeholder.cpp  render_engine.cpp
src/kale_engine/include/kale_engine/: render_engine.hpp
src/kale_executor/: CMakeLists.txt  placeholder.cpp
src/kale_executor/include/kale_executor/: executor_future.hpp  frame_data.hpp  render_task_scheduler.hpp  task_channel.hpp  task_data_manager.hpp  task_graph.hpp
src/kale_executor/include/kale_executor/detail/: mpsc_ring_buffer.hpp  power_of_2.hpp  spsc_ring_buffer.hpp
src/kale_pipeline/: CMakeLists.txt  instanced_draw.cpp  material_loader.cpp  material_pipeline_reload_registry.cpp  placeholder.cpp  post_process_pass.cpp
src/kale_pipeline/include/kale_pipeline/: forward_pass.hpp  gbuffer_pass.hpp  instanced_draw.hpp  lighting_pass.hpp  material.hpp  material_loader.hpp  material_pipeline_reload_registry.hpp  output_to_swapchain_pass.hpp  pbr_material.hpp  post_process_pass.hpp  render_graph.hpp  render_pass_builder.hpp  render_pass_context.hpp  rg_types.hpp  setup_render_graph.hpp  shader_manager.hpp  shadow_pass.hpp  submit_visible.hpp  transparent_pass.hpp
src/kale_pipeline/shaders/: blur.frag  composite_tone_map.frag  extract_brightness.frag  fxaa.frag  fxaa.vert  tone_mapping.frag  tone_mapping.vert
src/kale_pipeline/src/: shader_manager.cpp
src/kale_resource/: CMakeLists.txt  model_loader.cpp  placeholder.cpp  resource_manager.cpp  shader_compiler.cpp  staging_memory_manager.cpp  texture_loader.cpp
src/kale_resource/include/kale_resource/: model_loader.hpp  resource_cache.hpp  resource_handle.hpp  resource_loader.hpp  resource_manager.hpp  resource_types.hpp  shader_compiler.hpp  staging_memory_manager.hpp  texture_loader.hpp
src/kale_scene/: CMakeLists.txt  camera_node.cpp  entity_manager.cpp  frustum.cpp  lod_manager.cpp  placeholder.cpp  scene_manager.cpp  scene_switch.cpp  static_mesh.cpp
src/kale_scene/include/kale_scene/: camera_node.hpp  component_storage.hpp  entity.hpp  entity_manager.hpp  frustum.hpp  lod_manager.hpp  renderable.hpp  scene_manager.hpp  scene_node.hpp  scene_node_factories.hpp  scene_node_ref.hpp  scene_switch.hpp  scene_types.hpp  static_mesh.hpp  writeback_systems.hpp
tests/: CMakeLists.txt  test_action_mapping.cpp  test_bloom.cpp  test_bounding_box.cpp  test_camera_node.cpp  test_compressed_texture_dds.cpp  test_compressed_texture_ktx.cpp  test_cull_scene_multi_camera.cpp  test_cull_scene_single_camera.cpp  test_descriptor_set_pool.cpp  test_device_capabilities.cpp  test_device_error_lifecycle.cpp  test_device_performance_validation.cpp  test_draw_material_binding.cpp  test_draw_resource_check.cpp  test_ecs_executor_integration.cpp  test_ecs_parallel_system_integration.cpp  test_entity_component_storage.cpp  test_entity_manager.cpp  test_executor_compile_options.cpp  test_executor_engine_integration.cpp  test_executor_future.cpp  test_executor_performance_validation.cpp  test_file_change_detection.cpp  test_frame_data_main_loop_integration.cpp  test_frame_data_swap_buffer.cpp  test_frame_pipeline.cpp  test_frame_sync_completion.cpp  test_frustum.cpp  test_full_model_loader.cpp  test_fxaa.cpp  test_gamepad_support.cpp  test_gbuffer_pass.cpp  test_input_double_buffering.cpp  test_input_event_callback.cpp  test_instance_descriptor_set.cpp  test_instanced_draw.cpp  test_lighting_pass.cpp  test_load_async.cpp  test_lod_manager.cpp  (+62 more)
